# api/swagger.yaml
@@ -39,6 +39,8 @@ tags:
   externalDocs:
     description: "Find out more about us"
     url: "http://www.aimsquant.com"
+- name: "config"
+  description: "getting the static configs"
 schemes:
 - "http"
 produces:
@@ -2660,6 +2662,33 @@ paths:
           schema:
             $ref: "#/definitions/Error"
       x-swagger-router-controller: "Watchlist"
+  
+  /config:
+    get:
+      tags:
+        - config
+      summary: Get static configs
+      description: get static configurations required in the frontend
+      operationId: getConfig
+      security:
+      - api_key: []
+      parameters:
+      - name: "aimsquant-token"
+        in: "header"
+        description: "auth token"
+        type: "string"
+        required: true
+      - name: advice
+        in: query
+        type: string
+        description: config for advice
+        required: false
+      responses:
+        200:
+          description: OK
+      x-swagger-router-controller: "Config"
+
+
 
   /watchlist/{watchlistId}:
     get:
